--- a/_sass/0768_md/_block_md.scss
+++ b/_sass/0768_md/_block_md.scss
@@ -271,6 +271,11 @@
       }
     }
     .block-textonly {
+      padding-top: 1rem;
+      margin-bottom: 1rem;
+      &:last-child {
+        margin-bottom: 0rem;
+      }
       &:nth-child(2n) {
         padding-left: 2rem;
       }
