--- a/_sass/0992_lg/_block_lg.scss
+++ b/_sass/0992_lg/_block_lg.scss
@@ -79,4 +79,10 @@
       }
     }
   }
+  &#block5 {
+    .block-textonly {
+      padding-top: 0rem;
+      margin-bottom: 1.5rem;
+    }
+  }
 }
